# qmetaobject-rs

./: .appveyor.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.MIT  README.md
.github/workflows/: guide.yml  rust.yml
benchmark/qmetaobject/: Cargo.toml
benchmark/qmetaobject/src/: main.rs
benchmark/qml/: main.qml
benchmark/qml-rust/: Cargo.toml
benchmark/qml-rust/src/: main.rs
benchmark/qt_cpp/: main.cpp  qt_cpp.pro
examples/graph/: Cargo.toml  build.rs
examples/graph/shaders/: line.fsh  line.vsh  noisy.fsh  noisy.vsh
examples/graph/src/: gridnode.cpp  gridnode.h  linenode.cpp  linenode.h  main.qml  main.rs  nodes.rs  noisynode.cpp  noisynode.h
examples/kefia/: 0001-Fix-compile-with-stable.patch  0002-Port-to-qmetaobject-rs.patch  0003-Update-to-2018-edition-upgrade-deps-and-fix-warnings.patch  0004-Get-rid-of-lazysort-dependency.patch  0005-Update-patch-away-from-obsolete-QObjectBox.patch  0006-Replace-yaourt-with-expac.patch  0007-Rename-group-to-repo-and-meta-to-groups.patch  0008-Fix-UI-layout-and-connections-setup.patch  README
examples/nested_qobjects/: Cargo.toml  README.md
examples/nested_qobjects/src/: main.rs
examples/qenum/: Cargo.toml
examples/qenum/src/: main.rs
examples/qmlextensionplugins/: Cargo.toml  README  plugins.qml
examples/qmlextensionplugins/src/: lib.rs
examples/rqbg/: 0001-Port-to-qmetaobject-rs.patch  0002-Fix-build.patch  README.md  mailmodel.patch
examples/todos/: Cargo.toml  README  main.qml
examples/todos/src/: implementation.rs  main.rs
examples/webengine/: Cargo.toml  build.rs  index.html  main.qml
examples/webengine/src/: main.rs
guide/: book.toml
propertybindings/: Cargo.toml
propertybindings/examples/: plusminus.rs
propertybindings/src/: anchors.rs  items.rs  lib.rs  properties.rs  quick.rs  rslm.rs
qmetaobject/: Cargo.toml  build.rs  qmetaobject_rust.hpp
qmetaobject/src/: connections.rs  future.rs  itemmodel.rs  lib.rs  listmodel.rs  log.rs  qmetatype.rs  qrc.rs  qtdeclarative.rs  qtquickcontrols2.rs  qttypes.rs  scenegraph.rs  tablemodel.rs  test.rs  webengine.rs
qmetaobject/src/qtcore/: core_application.rs  mod.rs
qmetaobject/tests/: enums.rs  models.rs  tests.rs
qmetaobject/tests/common/: mod.rs
qmetaobject/tests/qml/: main.qml
qmetaobject_doc_comment_test/: Cargo.toml
qmetaobject_doc_comment_test/src/: lib.rs
qmetaobject_impl/: Cargo.toml
qmetaobject_impl/src/: doc.rs  lib.rs  qbjs.rs  qobject_impl.rs  qrc_impl.rs  simplelistitem_impl.rs
qmltest/: Cargo.toml  build.rs
qmltest/src/: main.rs
qttypes/: Cargo.toml  README.md  build.rs
qttypes/src/: lib.rs  primitives.rs  qcolor.rs
qttypes/src/core/: mod.rs  qbytearray.rs  qstring.rs  qurl.rs
qttypes/src/gui/: mod.rs  qcolor.rs
qttypes/src/qtcore/: mod.rs  primitives.rs  qbytearray.rs  qchar.rs  qsettings.rs  qstandardpaths.rs  qstring.rs  qvariant.rs
qttypes/src/qtcore/qlist/: common.rs  mod.rs  qstringlist.rs  qvariantlist.rs
qttypes/src/qtgui/: qcolor.rs
