[package]
name = "qmetaobject"
version = "0.1.2"
edition = "2018"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
build = "build.rs"
description = "Expose rust object to Qt and QML."
readme = "../README.md"
license = "MIT"
keywords = ["Qt", "QML", "QMetaObject",]
repository = "https://github.com/woboq/qmetaobject-rs"

[dependencies]
qmetaobject_impl = { path = "../qmetaobject_impl", version = "=0.1.1"}
lazy_static = "1.0"
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"

[dev-dependencies]
cstr = "0.1"

[package.metadata.docs.rs]
dependencies = [ "qtbase5-dev", "qtdeclarative5-dev" ]
rustc-args = [ "--cfg feature=\"docs-only\"" ]
