[package]
name = "qmetaobject"
version = "0.2.9"
edition = "2018"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
build = "build.rs"
description = "Expose rust object to Qt and QML."
readme = "../README.md"
license = "MIT"
categories = ["api-bindings", "gui"]
keywords = ["Qt", "QML", "QMetaObject",]
repository = "https://github.com/woboq/qmetaobject-rs"

[features]
default = ["log"]
chrono_qdatetime = ["qttypes/chrono"]
webengine = ["qttypes/qtwebengine"]

[dependencies]
qttypes = { path = "../qttypes", version = "0.2.0", features = ["qtquick"] }
qmetaobject_impl = { path = "../qmetaobject_impl", version = "=0.2.9"}
lazy_static = "1.0"
cpp = "0.5.6"
log = { version = "0.4", optional = true }

[build-dependencies]
cpp_build = "0.5.6"
semver = "1"

[dev-dependencies]
cstr = "0.2"
if_rust_version = "1"
tempfile = "^3"

[package.metadata.docs.rs]
dependencies = [ "qtbase5-dev", "qtdeclarative5-dev" ]
