[package]
name = "qmetaobject_impl"
version = "0.1.1"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]

description = "Custom derive for the qmetaobject crate."
readme = "../README.md"
license = "MIT"
keywords = ["Qt", "QML", "QMetaObject",]
repository = "https://github.com/woboq/qmetaobject-rs"


[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["full"] }
quote = "0.6.9"
proc-macro2 = "0.4.20"
