[package]
name = "qmetaobject_impl"
version = "0.2.9"
edition = "2018"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "Custom derive for the qmetaobject crate."
readme = "../README.md"
license = "MIT"
keywords = ["Qt", "QML", "QMetaObject",]
repository = "https://github.com/woboq/qmetaobject-rs"


[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
