[package]
name = "qmltest"
version = "0.1.0"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
build = "build.rs"

[dependencies]
# libc = "0.1"
cpp = { path = "/home/rust/rust-cpp/cpp"}
proc-macro-hack = "0.4"
qmetaobject_impl = { path = "../qmetaobject_impl"}

[build-dependencies]
gcc = "0.3"
cpp_build = { path = "/home/rust/rust-cpp/cpp_build"}
