[package]
name = "qmltest"
version = "0.1.0"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
build = "build.rs"

[dependencies]
# libc = "0.1"
cpp = { path = "/home/rust/rust-cpp/cpp"}
qmetaobject = { path = "../qmetaobject"}

[build-dependencies]
cpp_build = { path = "/home/rust/rust-cpp/cpp_build"}
